--- a/app/src/main/res/layout/activity_loginas.xml
+++ b/app/src/main/res/layout/activity_loginas.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".loginas">
+    tools:context=".login">
 <!--
     <TextView
         android:id="@+id/textView"
