--- a/app/src/main/res/layout/activity_signupas.xml
+++ b/app/src/main/res/layout/activity_signupas.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    android:theme="@style/Theme.GSA.NoActionBar"
-    tools:context=".signupas">
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/texttitle"
