--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:textSize="50dp" />
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/emaila"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title1"
@@ -30,7 +30,7 @@
         android:id="@+id/pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/email"
+        android:layout_below="@+id/emaila"
         android:layout_marginTop="25dp"
         android:hint="password"
         android:inputType="textPassword"
@@ -44,6 +44,16 @@
         android:layout_marginTop="50dp"
         android:text="log in"
         android:textSize="22dp" />
+
+    <Button
+        android:id="@+id/btntry"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title2"
+        android:layout_marginTop="50dp"
+        android:text="try"
+        android:textSize="22dp" />
+
 
     <TextView
         android:id="@+id/title2"
