--- a/app/src/main/res/layout/ass_row.xml
+++ b/app/src/main/res/layout/ass_row.xml
@@ -4,8 +4,9 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="5dp"
-    android:elevation="4dp"
-    app:cardUseCompatPadding="true">
+    android:elevation="4dp">
+    <!--app:cardUseCompatPadding="true"-->
+
 
     <RelativeLayout
         android:id="@+id/asscontainor"
