--- a/app/src/main/res/layout/activity_signupass.xml
+++ b/app/src/main/res/layout/activity_signupass.xml
@@ -59,8 +59,12 @@
             </LinearLayout>
         </LinearLayout>
 
-
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <LinearLayout
+            android:id="@+id/box1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
@@ -216,8 +220,9 @@
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btnsignup"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="35dp"
                         android:background="#38b5f2"
+                        android:onClick="sendverifyemail"
                         android:text="S'inscrire"
                         android:textAllCaps="false"
                         android:textColor="#f2f2f2"
@@ -228,6 +233,79 @@
 
             </LinearLayout>
 
+        </LinearLayout>
+
+            <LinearLayout
+            android:id="@+id/box2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+                android:visibility="gone"
+            android:layout_marginTop="28dp"
+            android:orientation="horizontal"
+            android:paddingLeft="14.5dp">
+
+            <View
+                android:layout_width="5.6dp"
+                android:layout_height="800dp"
+                android:background="#38b5f2" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="13dp"
+                android:layout_marginRight="35.6dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="800dp"
+                    android:layout_marginLeft="13dp"
+                    android:layout_marginRight="19dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20.3dp"
+                        android:gravity="center_horizontal"
+                        android:text="Inscription"
+                        android:textColor="#38b5f2"
+                        android:textSize="25sp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <EditText
+                            android:id="@+id/code"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="50dp"
+                            android:maxLength="5"
+                            android:layout_weight="1"
+                            android:textSize="32sp"
+                            android:textAlignment="center"
+                            android:gravity="center_horizontal"
+                            android:layout_gravity="center_horizontal"
+                            android:textColor="#38b5f2"/>
+                    </LinearLayout>
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/verify"
+                        android:layout_width="match_parent"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="30dp"
+                        android:background="#38b5f2"
+                        android:text="Confirmer"
+                        android:onClick="verify"
+                        android:textAllCaps="false"
+                        android:textColor="#f2f2f2"
+                        android:textSize="23dp" />
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
         </LinearLayout>
 
         <TextView
