--- a/app/src/main/res/layout/ass_row_su.xml
+++ b/app/src/main/res/layout/ass_row_su.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    app:cardElevation="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
-    android:elevation="4dp">
+    app:cardCornerRadius="5dp">
     <!--app:cardUseCompatPadding="true"-->
 
 
     <RelativeLayout
         android:id="@+id/asscontainor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="?selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
@@ -61,6 +62,10 @@
             android:textSize="25dp" />
 
     </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="#000"/>
 
 
 
