--- a/app/src/main/res/layout/fragment_sadmin_sear_up_1ass.xml
+++ b/app/src/main/res/layout/fragment_sadmin_sear_up_1ass.xml
@@ -99,7 +99,7 @@
             android:textSize="25dp"
             android:textStyle="bold" />
 
-        <EditText
+        <TextView
             android:id="@+id/martyv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
