--- a/app/src/main/res/layout/fragment_sadmin_act.xml
+++ b/app/src/main/res/layout/fragment_sadmin_act.xml
@@ -6,10 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".sadmin_act">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycview"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context="com.codinginflow.searchfunctionalityexample.MainActivity">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/black"
+            android:padding="5dp"
+            android:layout_margin="5dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:scrollbars="vertical" />
+
+    </LinearLayout>
+
 </FrameLayout>
