--- a/app/src/main/res/layout/activity_signupass.xml
+++ b/app/src/main/res/layout/activity_signupass.xml
@@ -223,7 +223,7 @@
                         android:layout_height="35dp"
                         android:background="#38b5f2"
                         android:onClick="sendverifyemail"
-                        android:text="S'inscrire"
+                        android:text="Suivant"
                         android:textAllCaps="false"
                         android:textColor="#f2f2f2"
                         android:textSize="23dp" />
