--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,131 +1,240 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    tools:context=".logina">
+    tools:context=".logina"
+    android:background="#f2f2f2">
 
-
-    <TextView
-        android:id="@+id/title1"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="GSA"
-        android:textSize="50dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/selected"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_below="@+id/title1"
-        android:text="Assure"
-        android:textSize="30dp" />
-
-    <EditText
-        android:id="@+id/emaila"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/selected"
-        android:layout_marginTop="83dp"
-        android:hint="email"
-        android:inputType="textEmailAddress"
-        android:textSize="25dp" />
-
-    <EditText
-        android:id="@+id/pass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/emaila"
-        android:layout_marginTop="25dp"
-        android:hint="password"
-        android:inputType="textPassword"
-        android:textSize="25dp" />
-
-    <Button
-        android:id="@+id/btnlogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/pass"
-        android:layout_marginTop="50dp"
-        android:text="log in"
-        android:textSize="22dp" />
-
-    <TextView
-        android:id="@+id/forgotpassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_below="@+id/btnlogin"
-        android:layout_marginTop="15dp"
-        android:text="forgot password?"
-        android:textSize="15dp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/title2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_below="@+id/forgotpassword"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="50dp"
-        android:text="You don't have an account? "
-        android:textSize="15dp" />
-
-    <TextView
-        android:id="@+id/btnsignup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/forgotpassword"
-        android:layout_toRightOf="@id/title2"
-        android:layout_marginTop="15dp"
-        android:text="sign up"
-        android:textSize="15dp"
-        android:textStyle="bold"/>
-
-<!--    <Switch-->
-<!--        android:id="@+id/switchadmin"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="40dp"-->
-<!--        android:layout_below="@+id/btnsignup"-->
-<!--        android:text="Admin" />-->
-    <RadioGroup
-        android:id="@+id/radiogroup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnsignup"
-        android:layout_marginTop="30dp"
-        android:gravity="center_horizontal"
-        >
-
-        <RadioButton
-            android:id="@+id/adminr"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Admin"
-            android:onClick="checkbtn"/>
+            android:layout_marginTop="38.3dp"
+            android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/assurer"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="98dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="32dp"
+                android:fontFamily="@font/poppinsbold"
+                android:gravity="center_horizontal"
+                android:text="CASH"
+                android:textColor="#38b5f2"
+                android:textSize="30sp" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="right|bottom"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="7.3dp"
+                    android:background="@drawable/small_cicle" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <FrameLayout
+                    android:id="@+id/half_circle"
+                    android:layout_width="50dp"
+                    android:layout_height="100dp"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/half_circle"></FrameLayout>
+            </LinearLayout>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/selected"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Assure"
-            android:checked="true"
-            android:onClick="checkbtn"/>
+            android:fontFamily="@font/poppins_regular"
+            android:gravity="center"
+            android:text="Que pour les assurés"
+            android:textColor="#38b5f2"
+            android:textSize="20dp" />
 
-        <RadioButton
-            android:id="@+id/expertr"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Expert"
-            android:onClick="checkbtn"/>
+            android:layout_marginTop="28dp"
+            android:orientation="horizontal"
+            android:paddingLeft="14.5dp">
 
-    </RadioGroup>
+            <View
+                android:layout_width="5.6dp"
+                android:layout_height="225dp"
+                android:background="#38b5f2" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="13dp"
+                android:layout_marginRight="35.6dp"
+                android:background="@drawable/rectangle">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="225dp"
+                    android:layout_marginLeft="13dp"
+                    android:layout_marginRight="19dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20.3dp"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:gravity="center_horizontal"
+                        android:text="Connexion"
+                        android:textColor="#38b5f2"
+                        android:textSize="25sp" />
 
 
-</RelativeLayout>
+                    <EditText
+                        android:id="@+id/emaila"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_regular"
+                        android:hint="Email"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:textSize="18sp"
+                        app:backgroundTint="#38b5f2" />
+
+                    <EditText
+                        android:id="@+id/pass"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_regular"
+                        android:hint="Mot de passe"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:textSize="18sp"
+                        app:backgroundTint="#38b5f2" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btnlogin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#38b5f2"
+                        android:text="Se connecter"
+                        android:textAllCaps="false"
+                        android:textColor="#f2f2f2"
+                        android:textSize="20dp" />
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/forgotpassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:fontFamily="@font/poppinsbold"
+            android:gravity="center"
+            android:text="Mot de passe oublié ? "
+            android:textColor="#38b5f2"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/t2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:fontFamily="@font/poppinsbold"
+            android:gravity="center"
+            android:text="Vous n'avez pas de compte ? "
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/btnsignup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
+            android:fontFamily="@font/poppinsbold"
+            android:gravity="center"
+            android:text="Inscrivez-vous."
+            android:textColor="#38b5f2"
+            android:textSize="15dp" />
+
+        <RadioGroup
+            android:id="@+id/radiogroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+
+            <RadioButton
+                android:id="@+id/adminr"
+                android:fontFamily="@font/poppins_regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="checkbtn"
+                android:buttonTint="#38b5f2"
+
+                android:text="Admin" />
+
+            <RadioButton
+                android:id="@+id/assurer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:onClick="checkbtn"
+                android:fontFamily="@font/poppins_regular"
+                android:text="Assuré"
+                android:buttonTint="#38b5f2"/>
+
+            <RadioButton
+                android:id="@+id/expertr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="checkbtn"
+                android:fontFamily="@font/poppins_regular"
+                android:text="Expert"
+                android:buttonTint="#38b5f2"/>
+
+        </RadioGroup>
+
+
+        <LinearLayout
+            style="@style/parent"
+            android:layout_weight="3"
+            android:orientation="vertical">
+
+            <ImageView
+                style="@style/parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/ic_login_bk"
+                android:contentDescription="login background" />
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
+
+</ScrollView>
