--- a/app/src/main/res/layout/activity_signupass.xml
+++ b/app/src/main/res/layout/activity_signupass.xml
@@ -42,7 +42,8 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginBottom="7.3dp"/>
+                    android:layout_marginBottom="7.3dp"
+                    android:background="@drawable/small_cicle" />
             </LinearLayout>
 
             <LinearLayout
@@ -53,18 +54,14 @@
                 <FrameLayout
                     android:id="@+id/half_circle"
                     android:layout_width="50dp"
-                    android:layout_height="106dp"
+                    android:layout_height="100dp"
                     android:layout_alignParentRight="true"
-                    android:background="@drawable/ic_account_as"></FrameLayout>
+                    android:background="@drawable/half_circle"></FrameLayout>
             </LinearLayout>
         </LinearLayout>
 
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <LinearLayout
-            android:id="@+id/box1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
@@ -73,14 +70,15 @@
 
             <View
                 android:layout_width="5.6dp"
-                android:layout_height="800dp"
+                android:layout_height="700dp"
                 android:background="#38b5f2" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="13dp"
-                android:layout_marginRight="35.6dp">
+                android:layout_marginRight="35.6dp"
+                android:background="@drawable/rectangle">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -93,6 +91,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20.3dp"
+                        android:fontFamily="@font/poppins_semibold"
                         android:gravity="center_horizontal"
                         android:text="Inscription"
                         android:textColor="#38b5f2"
@@ -103,126 +102,152 @@
                         android:id="@+id/noma"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="Nom"
                         android:inputType="textPersonName"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/prenoma"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="Prénom"
                         android:inputType="textPersonName"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/adressea"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="Adresse"
                         android:inputType="text"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/steassurance"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="Société d'assurance"
                         android:inputType="text"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/numpolice"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="N°police"
                         android:inputType="number"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/datevald"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="Attest valable du"
                         android:inputType="date"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/datevala"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="Attest valable au"
                         android:inputType="date"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/martyv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="Marque, Type véhicule"
                         android:inputType="text"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/immatriv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="Immatriculation véhicule"
                         android:inputType="number"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/agencea"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="Agence"
                         android:inputType="text"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/emaila"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="Email"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/passworda"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        app:backgroundTint="#38b5f2"
+                        android:fontFamily="@font/poppins_regular"
                         android:hint="Mot de passe"
                         android:inputType="textPassword"
                         android:maxLines="1"
+                        android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="18sp" />
 
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btnsignup"
                         android:layout_width="match_parent"
-                        android:layout_height="35dp"
+                        android:layout_height="wrap_content"
                         android:background="#38b5f2"
-                        android:onClick="sendverifyemail"
                         android:text="S'inscrire"
                         android:textAllCaps="false"
                         android:textColor="#f2f2f2"
@@ -233,79 +258,6 @@
 
             </LinearLayout>
 
-        </LinearLayout>
-
-            <LinearLayout
-            android:id="@+id/box2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-                android:visibility="gone"
-            android:layout_marginTop="28dp"
-            android:orientation="horizontal"
-            android:paddingLeft="14.5dp">
-
-            <View
-                android:layout_width="5.6dp"
-                android:layout_height="800dp"
-                android:background="#38b5f2" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="13dp"
-                android:layout_marginRight="35.6dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="800dp"
-                    android:layout_marginLeft="13dp"
-                    android:layout_marginRight="19dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20.3dp"
-                        android:gravity="center_horizontal"
-                        android:text="Inscription"
-                        android:textColor="#38b5f2"
-                        android:textSize="25sp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                        <EditText
-                            android:id="@+id/code"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="50dp"
-                            android:maxLength="5"
-                            android:layout_weight="1"
-                            android:textSize="32sp"
-                            android:textAlignment="center"
-                            android:gravity="center_horizontal"
-                            android:layout_gravity="center_horizontal"
-                            android:textColor="#38b5f2"/>
-                    </LinearLayout>
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/verify"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:layout_marginTop="30dp"
-                        android:background="#38b5f2"
-                        android:text="Confirmer"
-                        android:onClick="verify"
-                        android:textAllCaps="false"
-                        android:textColor="#f2f2f2"
-                        android:textSize="23dp" />
-
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
         </LinearLayout>
 
         <TextView
@@ -330,18 +282,16 @@
             android:textSize="15dp" />
 
         <LinearLayout
-            style="@style/Theme.GSA"
+            style="@style/parent"
             android:orientation="vertical"
-            android:layout_weight="3"
-            android:layout_width="3dp"
-            android:layout_height="match_parent">
+            android:layout_weight="3">
 
             <ImageView
-                style="@style/Theme.GSA"
+                style="@style/parent"
                 android:layout_height="match_parent"
-                android:contentDescription="login background"
-                android:layout_width="3dp"
-            />
+                android:background="@drawable/ic_login_bk"
+                android:contentDescription="login background" />
+
         </LinearLayout>
 
     </LinearLayout>
